--- a/main.tex
+++ b/main.tex
@@ -46,9 +46,9 @@ Ultimately, d3 provides a large set of tools to complete this project. This is a
 
 A large sunburst displaying all institutions allows for quick access to any specific one. A `breadcrumb' trail allows the user to keep track of where they are in this hierarchy, a legend gives a quick reference about which region matches to what colour, and an interactive map displaying what town is represented by each slice. This displays a clear navigational hierarchy for the DoR user to select specific regions, towns or institutions, while understanding what area of the UK he is searching in. 
 
-A scatter plot graph represents all document topics one of the selected institutions contains. The `4* Rating' is plotted against the word count for each document. This allows the DoR to easily identify which documents have a high ranking and how it correlates with the word count. The easy visualisation of the plotted points displays each documents ranking very clearly. The comparison of two topics can be easily distinguished from this graph by sorting between `Environment' and `Outputs' data, aiding a DoR user.
+A scatter plot graph represents all the unit of assessment documents from one of the selected institutions. The `4* Rating' is plotted against the word count for each document. This allows the DoR to easily identify which documents have a high ranking and how it correlates with the word count. The easy visualisation of the plotted points displays each documents ranking very clearly. The comparison of two topics can be easily distinguished from this graph by sorting between `Environment' and `Outputs' data, aiding a DoR user.
 
-Finally, a force-directed layout (Linked nodes) represents the analysis of a selected topic by representing the top three word combinations in a tree-like structure. The benefits of this structure allow for multiple topics to be appended onto the same institution's root node. This allows the building of a `map' to compare each weighting of the topics weights. Furthermore, the addition of more than one institution can be used as to compare the topic weights of each institution's weighting. All weightings displayed are relative to the current root node it is in. For example, if you added three different topics, the root node would add up to 100 percent. This allows for analysis of topic weightings relative to other topics by the same university.
+Finally, a force-directed layout (Linked nodes) displays the selected topic by representing the top three word combinations in a tree-like structure. The benefits of this structure allow for multiple units to be appended onto the same institution's root node. This allows the building of a `map' to compare each weighting of the topics weights. Furthermore, the addition of more than one institution can be used as to compare the topic weights of each institution's weighting. All weightings displayed are relative to the current root node it is in. For example, if you added three different topics, the root node would add up to 100 percent. This allows for analysis of topic weightings relative to other topics by the same institution.
 
 
 \section{Interface Design: Layouts \& Interactivity}
@@ -67,7 +67,7 @@ Finally, a force-directed layout (Linked nodes) represents the analysis of a sel
  \hline
  \raisebox{-\totalheight}{\includegraphics[width=0.3\textwidth]{imgs/Layout_SC.PNG}} 
  & This layout passes in all documents associated with a institution. This plots each point by the unique `UoAString with appended submission letters'. 
- & Topics that exist in the new selected institution change from cyan to green and move to their new location. Removed topics turn grey with half opacity and move to the bottom right corner and disappear. New topics move in from the top left corner. 
+ & Topics that exist in the newly selected institution change from cyan to green and move to their new location. Removed topics turn grey with half opacity and move to the bottom right corner and disappear. New topics move in from the top left corner. 
  \\
  \hline
  \raisebox{-\totalheight}{\includegraphics[width=0.3\textwidth]{imgs/Layout_NL.PNG}} 
@@ -154,14 +154,27 @@ Finally, a force-directed layout (Linked nodes) represents the analysis of a sel
 \begin{figure}[hbt!]
 	\centering
       \includegraphics[width=0.6\textwidth]{imgs/ln_int/remove_nodes.png} \\
-	\caption{Linked Node Highlights: 
+	\caption{Linked Node Fade: 
 	\textit{(a)} Removal of unit and child nodes while institution remains.
 	\textit{(b} Removal of all nodes.}
     \label{fig:lp_con:remove_nodes}
      \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
 \end{figure}
 
-\noindent Figure \ref{fig:lp_con:remove_nodes}.a shows the right-click interaction to remove a unit node and all children from the linked node graph. Figure \ref{fig:lp_con:remove_nodes}.b shows the removal of an institution node. This is helpful for a DoR after no longer requiring a certain topic or institution.
+\noindent Figure \ref{fig:lp_con:remove_nodes}.a shows the right-click interaction to remove a unit node and all children from the linked node graph, which the institution node remains. Figure \ref{fig:lp_con:remove_nodes}.b shows the removal of an institution node. This is helpful for a DoR after no longer requiring a certain word collection, topic or institution.
+
+\subsubsection{Sunburst to Scatter Plot Interaction}
+
+\begin{figure}[hbt!]
+	\centering
+      \includegraphics[width=\textwidth]{imgs/sb_sc_int/SB_SC_changedata.png} \\
+	\caption{Sunburst Click Institution: 
+	\textit{(a)} Change units on scatter plot by clicking on institution.}
+    \label{fig:sb_sc_int:changedata}
+     \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
+\end{figure}
+
+\noindent Figure \ref{fig:sb_sc_int:changedata}.a shows the left-click interaction to change to selected institution's unit data. This is helpful for a DoR to swap between institutions unit selection.
 
 
 \subsubsection{Scatter Plot to Sunburst Interaction}
@@ -175,7 +188,21 @@ Finally, a force-directed layout (Linked nodes) represents the analysis of a sel
 \end{figure}
 
 
-\noindent Figure \ref{fig:sc_sb_int:uoa_select}.a requires a right-click to highlight a point in magenta and disables all other interactions with that point. This also freezes the sunburst to display what institutions have the selected unit of assessment. Now selecting an institution from the sunburst will only pull the selected topics data onto the scatter plot to allow for easy comparison. After performing this action will reset the unit selection. This is useful for the DoR to allow for quick reference to what institutions have a document for the selected unit. This can provide clear comparisons of their 4* ratings.
+\noindent Figure \ref{fig:sc_sb_int:uoa_select}.a requires a right-click to highlight a point in magenta and disables all other interactions with that point. This also freezes the sunburst to display what institutions have the selected unit of assessment. Now selecting an institution from the sunburst will only pull the selected topics data onto the scatter plot to allow for easy comparison. After performing this action the point on the scatter plot will reset so it will be removed on the next institution selection. This is useful for the DoR to allow for quick reference to what institutions have a document for the selected unit. This can provide clear comparisons of their 4* ratings.
+
+
+\subsubsection{Scatter Plot to Linked Node Interaction}
+\begin{figure}[hbt!]
+	\centering
+      \includegraphics[width=0.4\textwidth]{imgs/sc_ln_int/SC_LN_create_node.png} \\
+	\caption{Scatter Plot Create Node: 
+	\textit{(a)} Clicking on scatter plot point creates node.}
+    \label{fig:sc_ln_int:create_node}
+     \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
+\end{figure}
+
+\noindent Figure \ref{fig:sc_ln_int:create_node}.a creates a node by clicking on a point. This is useful to the DoR by adding in more units to compare against. This can add multiple units from the same or different institution and append each to the root node.
+
 
 
 \subsubsection{Linked Node to Sunburst Interaction}
@@ -194,7 +221,7 @@ Finally, a force-directed layout (Linked nodes) represents the analysis of a sel
 \subsubsection{Sunburst, Scatter Plot and Linked Node Interactions}
 \begin{figure}[hbt!]
 	\centering
-      \includegraphics[width=0.42\textwidth]{imgs/sb_sc_ln_int/3_way_topic_highlight.png} \\
+      \includegraphics[width=0.55\textwidth]{imgs/sb_sc_ln_int/3_way_topic_highlight.png} \\
 	\caption{Unit of Assessment Highlights: 
 	\textit{(a)} Mouse over on Linked Node unit highlights same unit on scatter plot and every institution that contains that unit on the sunburst.
 	\textit{(b)} Same as \ref{fig:sb_sc_ln_int:3_way_topic_highlight}.a but mouse over on scatter plot point highlights same unit on linked node.}
@@ -206,14 +233,14 @@ Finally, a force-directed layout (Linked nodes) represents the analysis of a sel
 
 \begin{figure}[hbt!]
 	\centering
-      \includegraphics[width=0.5\textwidth]{imgs/sb_sc_ln_int/topics_in_current_and_in_highlighted.png} \\
+      \includegraphics[width=\textwidth]{imgs/sb_sc_ln_int/topics_in_current_and_in_highlighted.png} \\
 	\caption{All Unit of Assessment Highlights: 
 	\textit{(a)} Mouse over on sunburst institution highlights all the units which are also currently present on the scatter plot and linked node graph.}
     \label{fig:sb_sc_ln_int:topics_in_cur_mouse}
      \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
 \end{figure}
 
-\noindent Figure \ref{fig:sb_sc_ln_int:topics_in_cur_mouse}.a shows that when mousing over an institution on the sunburst, what units that are currently being represented in the scatter plot and linked node graphs are also present in that institution. This is particularly helpful for the DoR as to confirm that another unit they are looking for has the specific unit they are comparing.
+\noindent Figure \ref{fig:sb_sc_ln_int:topics_in_cur_mouse}.a shows that when mousing over an institution on the sunburst, the units that highlight on the scatter plot and linked node graphs are also present in that institution. This is particularly helpful for the DoR as to confirm that the unit they are looking for is in the moused over institution.
 
 
 
@@ -229,7 +256,7 @@ Finally, a force-directed layout (Linked nodes) represents the analysis of a sel
  \hline\hline
  \raisebox{-\totalheight}{\includegraphics[width=0.3\textwidth]{imgs/project_struct/project_structure.png}} 
  & 
- This project is based off a modular design. All charts are within the \textbf{`./js/lib/views/'} and matching to their own folder. These files are imported from the \textbf{`./index.html'} file. This file corresponds with the initialisation function presented by Chantler. This file also contains communal functions that each modular code imported can utilise. These functions work with variables assigned to the modular charts and are used to render data and display interactions.
+ This project is based off a modular design. All charts are within the \textbf{`./js/lib/views/'} and matching to their own folder. These files are imported into the \textbf{`./index.html'} file. This file corresponds with the initialisation function presented by Chantler. This file also contains global functions that each modular code imported can utilise. These functions work with variables assigned to the modular charts and are used to render data and display interactions.
  
  Each chart also has its own corresponding css file in \textbf{`./css/views/'} with their own folder. This allows to easily change specific highlighting designs, and is also imported into the \textbf{`./index.html'} file.
  \\ 
@@ -242,12 +269,12 @@ Finally, a force-directed layout (Linked nodes) represents the analysis of a sel
 \subsection{Use of Design Patterns}
 % This section should briefly describe any software design patterns that you have used. Each design pattern (together with a critical analysis of what their advantages and disadvantages were for your project) should be described in their own, short, numbered subsection (4.2.1, 4.2.2 … etc.)
 \subsubsection{Function Class}
-A prevalent software design pattern for this project was a function class. This is essentially a function imitating a class definition. This has it's advantages such as providing information hiding techniques and assigning variables locally for that class. This means data cannot accidentally be modified else where in this project. Another benefit of this allows for overrides of specific functions of variables when explicitly stated. For example, updating an accessor function when changing data on my scatter plot chart (See figure \ref{fig:sc_sb_int:uoa_select}). This also allowed for function chaining when continually returning an object from each public method.
+A prevalent software design pattern for this project was a function class. This is essentially a function imitating a class definition. This has its advantages such as providing information hiding techniques and assigning variables locally for that class. This means variables cannot accidentally be modified else where in this project. Another benefit of this allows for overrides of specific functions of variables when explicitly stated. For example, updating an accessor function when changing data on my scatter plot chart (See figure \ref{fig:sc_sb_int:uoa_select}). This also allowed for function chaining by continually returning an object from each public method.
 
 This has disadvantages however, by not allowing to return data explicitly when chaining multiple functions. This required the use of d3's select function to get data from DOM elements instead, which is not as efficient as direct access to a basic `getter' function.
 
 \subsubsection{Global Functions}
-Assigning global helper functions in the main \textbf{`./index.html'} allowed for cleaner syntax and less code repetition between charts. An example of this is `resetting' charts after modifying specific elements. This function quickly returned interacted elements back to their default state with one function call. This reduced development time greatly without constant implementation.
+Assigning global helper functions in the main \textbf{`./index.html'} allowed for cleaner syntax and less code repetition between charts. An example of this is `resetting' charts after modifying specific elements. This function quickly returned interacted elements back to their default state with one function call. This reduced development time greatly without constant implementation of these functions for individual charts.
 
 \subsubsection{Function Callbacks}
 This project has numerous amounts of function callbacks to handle functionality cleanly. This is also beneficial for changing what these functions do on the fly. This was useful in my project when I swap my x-axis data plots from `environment' to `output'. It was also beneficial for disabling mouse click and mouse over functionality when selecting a topic from my scatter plot.
@@ -262,7 +289,7 @@ This project has numerous amounts of function callbacks to handle functionality 
 I am particularly proud of this chart design as I implemented a node creation function that fitted document data into the flat data set required by this layout (See \textbf{`addNodes()'} in \textbf{`linkedNode.js'}). I also implemented traversal functions to update node weights on addition or deletion, delete specific nodes and delete all their children nodes (See \textbf{`removeNodeAndChildren()'} and \textbf{`updateWeights()'} in \textbf{`linkedNode.js'}).
 
 \subsubsection{Scatter Plot Selection Implementation}
-I implemented a point selection function on the scatter plot graph to allow comparison of two or more units when selecting another institution. This kept the current point in the graph and filtered the new incoming data to only allow the selected unit (See \textbf{`checkAnySelected()'} and \textbf{`rightClickFunction()'} in \textbf{`sequences.js'})..
+I implemented a point selection function on the scatter plot graph to allow comparison of two or more units when selecting another institution. This kept the current point in the graph and filtered the new incoming data to only allow the selected unit (See \textbf{`checkAnySelected()'} and \textbf{`rightClickFunction()'} in \textbf{`sequences.js'}).
 
 \subsubsection{Bread Crumb Trail Scale to Words}
 I modified the bread crumb implementation to allow the sizing to fit the displayed word when it is rendered with. This did not come with the original implementation of this sunburst (See \textbf{`updateBreadcrumbs()'} in \textbf{`sequences.js'}).
@@ -340,7 +367,7 @@ I implemented extra functionality, such as point selection for units. I also add
  \hline
 \end{tabular}
 \end{center}
-I heavily modified the original file to correspond with the same setup used in the course. This allows me to understand how this view works as well as showing understanding of methods learned during this course. I also modified the code to implement node creating when new documents were added in. I also added methods to manipulate nodes, such as modify the weight, scaling them correctly, deletion of nodes and there children and addition of labels onto nodes.
+I heavily modified the original file to correspond with the same setup used in the course. This allows me to understand how this view works as well as showing understanding of methods learned during this course. I also modified the code to implement node creation when new documents were added in. I also added methods to manipulate nodes, such as modify the weight, scaling them correctly, deletion of nodes and there children and addition of labels onto nodes.
 
 
 \subsubsection{map\_v001.js}
