Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -272,7 +272,7 @@ Finally, a force-directed layout (Linked nodes) displays the selected topic by r
 \subsubsection{General Update Pattern}
 The bases of this course was based on the General Update Pattern (GUP). This design principle was used consciously throughout my project. This allowed for easy manipulation of new data \textit{entering} a chart, assigning all elements their specific attributes and callback functions. The \textit{update} selections was used to carry out setting specific attributes towards elements which were staying on the svg. The final \textit{exiting} elements would be removed from a chart but by selecting this group allows transitions to perform smooth exits across the svg, or setting specific attributes such as making an element grey. This design pattern is simple yet effective and is apparent in all of Bostock's work.
 
-\subsection{Layout Generators}
+\subsubsection{Layout Generators}
 These variables would construct the basic shapes of each chart and plot smaller shapes, such as arcs, together to create a large shape, like a sunburst. This is used in my sunburst to shape each arc based on the data created by d3's partition function. This function creates node's with unique attributes which are interpreted by the arc layout generator. My sunburst zoom function was implemented by modifying the arc generator, so that the `zoomed' selection would be enlarged while the filter slices would shrink to nothing. 
 
 \subsubsection{Function Class}
